--- a/package.json
+++ b/package.json
@@ -21,14 +21,14 @@
     "@nestjs/common": "^9.4.1",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^9.4.1",
-    "@nestjs/event-emitter": "1.4.1",
     "@nestjs/jwt": "^10.1.1",
     "@nestjs/platform-express": "^9.4.1",
     "@nestjs/swagger": "^7.1.12",
     "@nestjs/typeorm": "^10.0.0",
     "axios": "^1.5.1",
     "builder-pattern": "^2.2.0",
-    "bull": "^4.11.4",
+    "canvas": "^2.11.2",
+    "chart.js": "^4.4.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cls-rtracer": "^2.6.3",
@@ -38,17 +38,18 @@
     "express": "^4.18.2",
     "fast-csv": "^4.3.6",
     "firebase-admin": "^11.5.0",
-    "ioredis": "^5.3.2",
     "libphonenumber-js": "^1.10.49",
     "moment-timezone": "^0.5.43",
-    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.6.1",
     "nest-winston": "^1.9.4",
     "nestjs-request-context": "^2.1.0",
     "reflect-metadata": "^0.1.13",
     "stripe": "^14.2.0",
     "twilio": "^4.19.0",
-    "typeorm": "^0.3.17"
+    "typeorm": "^0.3.17",
+    "chartjs-node-canvas": "^4.1.6",
+    "chart.js": "^3.5.1",
+    "aws-sdk": "^2.1589.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.1.18",
