--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@nestjs/core": "^9.4.1",
     "@nestjs/jwt": "^10.1.1",
     "@nestjs/platform-express": "^9.4.1",
+    "@nestjs/event-emitter": "^2.0.4",
     "@nestjs/swagger": "^7.1.12",
     "@nestjs/typeorm": "^10.0.0",
     "axios": "^1.5.1",
